--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -62,9 +62,10 @@ h6 {
 }
 
 .img-store-comic {
-    width: 200px;
+    width: 300px;
     margin: auto;
     margin-bottom: 20px;
+    margin-right: 50px;
 }
 
 .bg-light-gray {
@@ -288,6 +289,8 @@ header {
     background-size: cover;
     -o-background-size: cover;
     background-position: left;
+    max-height: 350px;
+    margin-top: 100px;
 }
 
 header .intro-text {
@@ -320,7 +323,7 @@ header .intro-text .intro-heading img {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 230px;
         padding-bottom: 200px;
     }
 
@@ -364,6 +367,10 @@ section h3.section-subheading {
 @media(min-width:768px) {
     section {
         padding: 150px 0;
+    }
+
+    section#services {
+        padding: 250px 0;
     }
 }
 
