--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,26 +9,22 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
-                   <img class="img-store-comic img-responsive" src="img/comics/1.jpg" alt="">
+                   <img class="img-store-comic img-responsive" src="img/comics/1prize.png" alt="">
                    <a href="https://sowl.co/KaBti" class="page-scroll btn btn-xl">Get it now</a>
                     <h4 class="service-heading">Firestarter</h4>
-                    <p class="text-muted">A misterious place, a firestarter and an external visitor, conveniently mixed in a magical universe.</p>
+                    <p class="text-muted">Agni is willing to do anything to get her hands on the HOLOESPHERE and break the spell that binds her to the terrible demon Luciphiros.</p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img class="img-store-comic img-responsive" src="img/comics/2prize.png" alt="">
+                   <a href="https://sowl.co/KaBti" class="page-scroll btn btn-xl">Get it now</a>
+                    <h4 class="service-heading">The color of magic</h4>
+                    <p class="text-muted">Valf, the most wanted air pirate, wants the HOLOESPHERE as much as Agni does. Does this make them rivals or allies?</p>
                 </div>
                 <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <img class="img-store-comic img-responsive" src="img/comics/3prize.png" alt="">
+                   <a href="https://sowl.co/KaBti" class="page-scroll btn btn-xl">Get it now</a>
+                    <h4 class="service-heading">Dungeons & Dragons</h4>
+                    <p class="text-muted">To get hold of the HOLOESPHERE, Agni and his friends must escape from some dungeons... where dragons are everywhere!</p>
                 </div>
             </div>
         </div>
