--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,10 +24,10 @@
                         <a class="page-scroll" href="#services">Comics</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Universos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -42,10 +42,13 @@
             <div class="intro-text">
                 <!-- <div class="intro-heading">Welcome to Holosphere</div> -->
                 <div class="intro-heading"><img class="img-circle img-responsive" src="img/logo.png" alt=""></div>
-                <a href="#services" class="page-scroll btn btn-xl">Explore the universe</a>
+                <h3 class="section-subheading text-muted"></h3>
+                <a href="#services" class="page-scroll btn btn-xl">Explora el universo</a>
             </div>
         </div>
     </header>
+
+    <h3 class="section-subheading text-muted"></h3>
 <!--
         {% for page in site.pages %}
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
