--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -682,8 +682,7 @@ aside.clients img {
 }
 
 section#contact {
-    background-color: #222;
-    background-image: url('{{ site.baseurl }}/img/map-image.png');
+    background-color: #{{ site.data.template.color.secondary-dark }};
     background-position: center;
     background-repeat: no-repeat;
 }
