--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,19 +12,19 @@
             <div class="row text-center">
                 <div class="col-md-4">
                    <img class="img-store-comic img-responsive" src="img/comics/1prize.png" alt="">
-                   <a href="https://sowl.co/KaBti" class="page-scroll btn btn-xl">Get it now</a>
+                   <a href="https://sowl.co/KaBti" class="page-scroll btn btn-xl">Comprar</a>
                     <h4 class="service-heading">{{ home_data.comic1_title | escape}}</h4>
                     <p class="text-muted">{{ home_data.comic1_description | escape}}</p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-store-comic img-responsive" src="img/comics/2prize.png" alt="">
-                   <a href="https://sowl.co/5ivRk" class="page-scroll btn btn-xl">Get it now</a>
+                   <a href="https://sowl.co/5ivRk" class="page-scroll btn btn-xl">Comprar</a>
                     <h4 class="service-heading">{{ home_data.comic2_title | escape}}</h4>
                     <p class="text-muted">{{ home_data.comic2_description | escape}}</p>
                 </div>
                 <div class="col-md-4">
                     <img class="img-store-comic img-responsive" src="img/comics/3prize.png" alt="">
-                   <a href="https://sowl.co/WqZFs" class="page-scroll btn btn-xl">Get it now</a>
+                   <a href="https://sowl.co/WqZFs" class="page-scroll btn btn-xl">Comprar</a>
                     <h4 class="service-heading">{{ home_data.comic3_title | escape}}</h4>
                     <p class="text-muted">{{ home_data.comic3_description | escape}}</p>
                 </div>
